#
# Copyright 2019 Artem Priakhin
#

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_test(
    name = "problems_581",
    size = "small",
    srcs = ["problems_581.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)
